--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -143,17 +143,18 @@
         {name: '043-048', duration: 1},
         {name: '049-054', duration: 1},
         {name: '055-060', duration: 1},
-        {name: 'PE 001-060', duration: 1},
+        {name: 'PE-1', duration: 1},
         {name: '061-066', duration: 1},
         {name: '067-072', duration: 1},
         {name: '073-078', duration: 1},
         {name: '079-084', duration: 1},
         {name: '085-090', duration: 1},
         {name: '091-096', duration: 1},
-        {name: 'PE 081-100', duration: 1},
+        {name: 'PE-2', duration: 1},
         {name: '097-102', duration: 1},
         {name: '103-108', duration: 1},
         {name: '109-114', duration: 1},
+        {name: 'PE-3', duration: 1},
         {name: '115-118', duration: 1},
       ],
       rounds: ['视频',
@@ -163,7 +164,7 @@
         {label: '笔记', duration: 1},
         {label: '笔记', duration: 1}
       ],
-      restDays: '2026-01-05,2026-01-07,2026-01-09,2026-01-11,2026-01-12,2026-01-16,2026-01-17,2026-01-18,2026-01-19,2026-01-21,2026-01-27,2026-01-28,2026-01-29,2026-02-01,2026-02-02'
+      restDays: '2026-01-05,2026-01-07,2026-01-09,2026-01-11,2026-01-12,2026-01-16,2026-01-17,2026-01-18,2026-01-19,2026-01-21,2026-01-27,2026-01-28,2026-02-01,2026-02-02,2026-02-05,2026-02-06,2026-02-07,2026-02-09'
     },
     coreWords: {
       startDate: '2025-10-10',
