--- a/english/word/utils/review.html
+++ b/english/word/utils/review.html
@@ -24,7 +24,7 @@
         <span id="currentFileDisplay" class="current-file-display"></span>
     </div>
     <div class="header-controls">
-        <button class="btn-ghost" onclick="app.toggleShortcuts()" title="快捷键">
+        <button class="btn-shortcuts btn-ghost" onclick="app.toggleShortcuts()" title="快捷键">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
                 <line x1="9" y1="9" x2="9" y2="9"></line>
