--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -67,7 +67,8 @@
         <div class="task-col">
             <label><input type="radio" name="task-type" value="advancedMathMo"> Mo Advanced Mathematics</label>
             <label><input type="radio" name="task-type" value="writeMo"> Mo Write</label>
-            <label><input type="radio" name="task-type" value="lowFrequencyWords&PEMo"> Mo Low-Frequency Words & PE</label>
+            <label><input type="radio" name="task-type" value="lowFrequencyWords&PEMo"> Mo Low-Frequency Words &
+                PE</label>
         </div>
     </div>
 
@@ -155,14 +156,14 @@
         {name: '103-108', duration: 1},
         {name: '109-114', duration: 1},
         {name: 'PE-3', duration: 1},
-        {name: '115-118', duration: 1},
+        {name: '115-118', duration: 1}
       ],
       rounds: ['视频',
         {label: '笔记', duration: 1},
-        {label: '笔记', duration: 1},
-        {label: '笔记', duration: 1},
-        {label: '笔记', duration: 1},
-        {label: '笔记', duration: 1}
+        {label: '浏览', duration: 1},
+        {label: '浏览', duration: 1},
+        {label: '遮挡', duration: 1},
+        {label: '遮挡', duration: 1}
       ],
       restDays: '2026-01-05,2026-01-07,2026-01-09,2026-01-11,2026-01-12,2026-01-16,2026-01-17,2026-01-18,2026-01-19,2026-01-21,2026-01-27,2026-01-28,2026-02-01,2026-02-02,2026-02-05,2026-02-06,2026-02-07,2026-02-09'
     },
@@ -387,7 +388,7 @@
         {label: '课后习题', duration: 3},
         {label: '基础1000题', duration: 3},
         {label: '看笔记', duration: 3},
-        {label: '强化1000题', duration: 3},
+        {label: '强化1000题', duration: 3}
       ],
       restDays: '2025-12-26,2025-12-27,2025-12-28,2025-12-29,2025-12-30,2026-01-06,2026-01-10,2026-01-11,2026-01-19,2026-01-20,2026-01-21,2026-01-22,2026-01-23,2026-01-24,2026-01-25,2026-02-12,2026-02-13,2026-02-14,2026-02-15,2026-02-16,2026-02-17,2026-02-18,2026-02-19,2026-02-20,2026-02-21,2026-02-22,2026-02-23'
     },
@@ -413,8 +414,14 @@
         {name: '二重积分', duration: 4},
         {name: '微分方程', duration: 5}
       ],
-         rounds: [{label: '书', duration: 1}, {label: '复习概念+例题', duration: 1},{label: '做基础题', duration: 2}, {label: '总结', duration: 1}, {label: '做提高题', duration: 2},{label: '复习错题', duration: 1}, {label: '复习笔记', duration: 1}
-        ],
+      rounds: [{label: '书', duration: 1}, {label: '复习概念+例题', duration: 1}, {
+        label: '做基础题',
+        duration: 2
+      }, {label: '总结', duration: 1}, {label: '做提高题', duration: 2}, {
+        label: '复习错题',
+        duration: 1
+      }, {label: '复习笔记', duration: 1}
+      ],
       restDays: '2025-12-14,,2025-12-21,2025-12-27,,2025-12-29,,2025-12-31,2026-01-02,2026-01-03,2026-01-01,2026-01-07,2026-01-06,2026-01-09,2026-01-010,2026-01-11,2026-01-12,2026-01-13,2026-01-14,2026-01-15,2026-01-16,2026-01-17,2026-01-18,2026-01-19,2026-01-20,2026-01-21,2026-01-22,2026-01-28,2026-01-29,2026-02-06,2026-02-09'
 
     },
@@ -430,7 +437,7 @@
         //{name: '017', duration: 1}, {name: '018', duration: 1}, {name: '019', duration: 1}, {name: '020', duration: 1},
         {name: '041', duration: 1}, {name: '042', duration: 1}, {name: '043', duration: 1}, {name: '044', duration: 1},
         {name: '045', duration: 1}, {name: '046', duration: 1}, {name: '047', duration: 1}, {name: '048', duration: 1},
-        {name: '049', duration: 1}, {name: '050', duration: 1},
+        {name: '049', duration: 1}, {name: '050', duration: 1}
         //{name: '051', duration: 1}, {name: '052', duration: 1},
         //{name: '053', duration: 1}, {name: '054', duration: 1}, {name: '055', duration: 1}, {name: '056', duration: 1},
         //{name: '057', duration: 1}, {name: '058', duration: 1}, {name: '059', duration: 1}, {name: '060', duration: 1}
@@ -472,7 +479,7 @@
         {label: '笔记', duration: 1}
       ],
       restDays: '2025-12-21,2025-12-23,2025-12-25,2025-12-27,2025-12-29,2025-12-31,2026-01-02,2026-01-04,2026-01-06,2026-01-08,2026-01-10,2026-01-12,2026-01-14,2026-01-16'
-   }
+    }
   };
 
   // 创建任务行
